# val

./: .gitignore  README.md  log.html  out.txt  pyproject.toml
src/val/: agent.py  gpt_completer.py  utils.py
src/val/env_interfaces/: abstract_interface.py
src/val/htn_interfaces/: abstract_interface.py
src/val/prompts/: chat_map.txt  chat_namer.txt  chat_paraphrase_ider.txt  chat_segmenter new.txt  chat_segmenter.txt  chat_verbalizer.txt  life_depends new.txt
src/val/user_interfaces/: abstract_interface.py  console_interface.py
tests/: test_dice_adventure.py  test_overcooked.py  test_space_transit.py  test_tictactoe.py  test_tictactoe_basic.py
val/: agent.py  agent2.py  gpt_completer.py  utils.py
val/env_interfaces/: abstract_interface.py
val/env_interfaces/dice_adventure/: dice_adventure_env.py  dice_adventure_python_env.py  env_actions.json  game_actions_env.json  move_planner.py
val/env_interfaces/overcooked_ai/: overcooked_ai_env.py
val/env_interfaces/space_transit/: space_transit_env.py  space_transit_env_htn.py
val/env_interfaces/tictactoe/: tictactoe.py  tictactoe_env.py
val/htn_interfaces/: abstract_interface.py  basic_htn_interface.py  py_htn_interface.py  py_htn_interface_methods.py
val/prompts/: chat_gen.txt  chat_map.txt  chat_namer new.txt  chat_paraphrase_ider.txt  chat_segmenter new.txt
val/user_interfaces/: abstract_interface.py  console_interface.py  launch_server.py  launch_socket_io_server.py  web_interface.py
val/user_interfaces/static/: confirmation.js  dialog.js
val/user_interfaces/templates/: chat.html
(+21 files in other folders)
